# CPP_SkillBox

./: CMakeList.txt  CMakeLists.txt  README.md  Village.cpp  Village.sln  Village.vcxproj  contact.cpp  contact.h  main.cpp  main.h  mobile.cpp  mobile.h  serviceCall.cpp  serviceCall.h  serviceSMS.cpp  serviceSMS.h  village.txt
App_Class/: App_Class.cpp  App_Class.vcxproj  App_Class.vcxproj.filters  audiotracks.txt
CMakePrj_Class/: CMakeLists.txt  CMakePrj_Class.cpp  CMakePrj_Class.h  Player.cpp  Player.h  Track.cpp  Track.h
CMakeProject/: CMakeLists.txt
CMakeProject/CMakeProject/: CMakeLists.txt  CMakeProject.cpp  CMakeProject.h  OPERATING_ROOM.cpp  OPERATING_ROOM.h  cpu.cpp  cpu.h  disk.cpp  disk.h  gpu.cpp  gpu.h  kbd.cpp  kbd.h  ram.cpp  ram.h
MacrosPractics/: MacrosPractics.cpp  MacrosPractics.sln  MacrosPractics.vcxproj  MacrosPractics.vcxproj.filters
MapPractics/: MapPractics.cpp  MapPractics.vcxproj  MapPractics.vcxproj.filters  main.cpp
TimePractics/: Task1.cpp  Task2.cpp  Task3.cpp  TimePractics.vcxproj
